# skill-from-docs

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/skills/scrapling/: README.md  SKILL.md
.claude/skills/scrapling/references/: api-quick-ref.md  cookie-vault.md  maintenance.md  site-patterns.md  troubleshooting.md
.claude/skills/scrapling/templates/: basic_fetch.py  parse_only.py  session_login.py  stealth_cloudflare.py
src/skill_from_docs/: cli.py  crawler.py  extractor.py  synthesizer.py  writer.py
