[project]
name = "skill-from-docs"
version = "0.1.0"
description = "Crawl docs sites and synthesize Claude Code skills via Claude API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapling[fetchers]>=0.4.8",
    "anthropic>=0.40.0",
    "click>=8.1.7",
    "html2text>=2024.2.26",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
skill-from-docs = "skill_from_docs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_from_docs"]
